--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,9 +26,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "src/app/repository-details"
   ],
-  "exclude": ["node_modules"],
-  "noUnusedLocals": true,
-  "noUnusedParameters": true
+  "exclude": ["node_modules"]
 }
