--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "nuqs": "^2.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "swr": "^2.3.6",
