chore: update .gitignore to clean pr

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Dependências
 /node_modules
 /.pnp
 .pnp.*
@@ -10,35 +8,41 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
+# Build e cache
+/.next
+/out
+/build
+/.turbo
+
+# Cobertura de testes
 /coverage
 
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
+# Sistema
+.DS_Store
+Thumbs.db
+
+# Arquivos de ambiente
 .env*
+!.env.example
 
-# vercel
+# Configuração local
 .vercel
+*.pem
 
-# typescript
+# Typescript
 *.tsbuildinfo
 next-env.d.ts
 
-*storybook.log
+# Storybook
 storybook-static
+*.storybook.log
+
+# Jest & Vitest cache
+/.jest-cache
+/.vitest
