--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@storybook/nextjs": "^9.1.2",
     "axios": "^1.11.0",
     "babel-jest": "^30.0.5",
     "class-variance-authority": "^0.7.1",
@@ -31,11 +32,10 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.0",
     "@eslint/eslintrc": "^3",
+    "@faker-js/faker": "^9.9.0",
     "@storybook/addon-a11y": "^9.1.2",
     "@storybook/addon-docs": "^9.1.2",
     "@storybook/addon-onboarding": "^9.1.2",
-    "@storybook/addon-vitest": "^9.1.2",
-    "@storybook/nextjs-vite": "^9.1.2",
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
