--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "dev:storybook": "storybook dev -p 6006",
-    "build:storybook": "storybook build",
-    "prepare": "husky"
+    "build-storybook": "storybook build",
+    "prepare": "husky",
+    "chromatic": "npx chromatic --project-token=chpt_a72fc222223e122"
   },
   "dependencies": {
     "@storybook/nextjs": "^9.1.2",
@@ -46,6 +47,7 @@
     "@types/react-dom": "^19",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "chromatic": "^13.1.3",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "eslint-plugin-storybook": "^9.1.2",
